--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "rimraf": "^2.4.3",
     "stats-webpack-plugin": "^0.2.2",
     "style-loader": "^0.13.0",
-    "stylus-loader": "^1.4.2",
+    "stylus-loader": "2.4.0",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
