--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-eslint": "^4.1.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.2.0",
