Setting up app to use production data. Oh yes, we can login now! Problem is we need to set NODE_ENV to production in the shell, hmm

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "start": "babel-node server.js",
     "test": "",
     "eslint": "eslint .",
-    "build": "webpack --config webpack.production.config.js -p"
+    "build": "NODE_ENV=production webpack --config webpack.production.config.js -p"
   },
   "author": "Zooniverse",
   "license": "Apache-2.0",
