--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/zooniverse/zoo-react-starterify",
   "dependencies": {
     "history": "^1.13.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.4.5",
